Missing SDS features added
